1998-12-03  Marcus G. Daniels  <mgd@chama.santafe.edu>

	* protocol.el (vcg-graph-all-protocols, vcg-output-protocol-graph): 
	New functions.  VCG graph generation support.

1998-10-30  Marcus G. Daniels  <mgd@chama.santafe.edu>

	* configure.in: Check for pnmcrop and complain if it isn't available.

1998-10-28  Alex Lancaster  <alex@santafe.edu>

	* print.dsl: Changed all references of para-style to
	default-text-style throughout, as per current use in Modular
	DocBook stylesheets 1.19.

1998-10-18  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* Makefile.rules:  Use $(MAKE) instead of make.

1998-10-14  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* configure.in: Use curly instead of parens for default swarm_srcdir,
	`${SWARMSRCDIR}'.
	(top_dossrcdir, swarm_dossrcdir): New variables which correspond
	to DOS-style paths of top_srcdir and swarm_srcdir.

	* catalog.in: Use top_dossrcdir instead of top_srcdir throughout.

	* Makefile.rules (HTML, PRINT): Use top_dossrcdir.
	(%.fot, _%.tex, %.rtf, %.html): Transform potential UNC 
	dependent path to DOS-style path.

	* Makefile.common (%revhistory.sgml): Use top_dossrcdir and
	swarm_dossrcdir instead of top_srcdir and swarm_srcdir.

	* configure.in (srcdosdir, swarm_srcdosdir): Set and substitute.

1998-10-12  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* Makefile.rules (GENERAL): Depend on FIGS.
	(DATA): Remove dependency on FIGS.
	(html dvi rtf fot ps): Depend on all-recursive.
	(all-recursive): Default as nothing.
	(%.dvi): Run jadetex three times.

1998-10-11  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* Makefile.am (html dvi rtf fot ps htmldist dvidist rtfdist psdist): 
	Depend on versions.ent.

1998-10-10  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* Makefile.am (versions.ent): Check to see if it's actually
	changed before touching. 

1998-10-09  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* Makefile.rules (_$(NAME).tex $(addprefix $(NAME),.fot .rtf), 